--- a/css/footer.css
+++ b/css/footer.css
@@ -13,6 +13,7 @@
 } 
 
 .footer-texto {
+  margin-top: 60px;
   font-size: 1.5rem;
   line-height: 1.33;
   color: #cccccc;
@@ -23,6 +24,7 @@
   font-size: 2.25rem;
   line-height: 1.1;
   color: #fff;
+  margin-top: 60px;
   margin-bottom: 30px;
 }
 
